Doc/force-app/main/default/objects/SKU_Config_Staging__c/fields/Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>Branch_Name__c</fullName>
    <description>Feature branch created in GitHub for this PR.</description>
    <label>Branch Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>