Doc/force-app/main/default/objects/SKU_Config_Staging__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Error details if PR creation fails. Populated with exception message and stack trace.</description>
    <label>Error Message</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>