Doc/force-app/main/default/objects/SKU_Config_Staging__c/fields/Finalized_By__c.field-meta.xml
<CustomField>
    <fullName>Finalized_By__c</fullName>
    <description>Indicates who triggered processing — User (via Finalize Save button) or Scheduled Batch (daily safety net).</description>
    <label>Finalized By</label>
    <length>50</length>
    <type>Text</type>
</CustomField>