Doc/force-app/main/default/objects/SKU_Config_Staging__c/fields/PR_Number__c.field-meta.xml
<CustomField>
    <fullName>PR_Number__c</fullName>
    <description>GitHub Pull Request number.</description>
    <label>PR Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>